fix menu items alignment according to header layout

--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -151,6 +151,7 @@ $yith_proteo_large_desktop_device_width_min: '/*<yith_proteo_large_desktop_devic
 	}
 	.main-navigation ul {
 		display: block;
+		text-align: right;
 	}
 	.site-header.left_logo_navigation_inline {
 		.header-contents {
